--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angellist",
+  "name": "startups-cologne",
   "version": "0.0.0",
   "dependencies": {
     "angular-unstable": "~1.1.5",
